# git-audit

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  readme.sh
evm/: GitAudit.sol  Mock.sol
src/: loggers.rs  main.rs  settings.rs
tests/: .gitignore  Makefile  __init__.py  fresh.py  requirements.txt  test_env.py  test_git_audit.py  test_sanity.py
