[package]
name = "git-audit"
version = "0.1.0"
authors = [ "Gustav Behm <me@rootmos.io>" ]

[dependencies]
git2 = "0.10.1"
config = "0.9.3"
clap = "2.33.0"
dirs = "2.0.2"
serde_derive = "1.0.101"
serde = "1.0.101"
serde_json = "1.0.41"
log = "0.4.8"
env_logger = "0.7.0"
hex = "0.4.0"
web3 = "0.8.0"
ethereum-tx-sign = "1.0.1"
tokio-core = "0.1.17"
secp256k1 = "0.12.0"
tiny-keccak = "1.5.0"
ethabi = "9.0.1"
primitive-types = "0.6.0"
